<resources>
    <string name="app_name">Tacere</string>
    <string name="main_action_settings">Settings</string>
    <string name="main_action_about">About</string>
    <string name="main_action_beta">Beta Releases</string>
    <string name="main_action_report_bug">Send Feedback</string>
    <string name="main_upcoming_events">Events in the next %1$d days</string>
    <string name="main_error_service_disabled">Automatic silencing disabled in settings</string>
    <string name="main_error_no_events">No calendar events found for the next %1$s.</string>
    <string name="list_error_no_calendars">No calendars have been selected to be synced.</string>
    <string name="main_error_no_permissions">Tacere has not been given permission to read your system calendar.  Please enable permissions below.</string>
    <string name="about_title">About</string>
    <string name="about_action_tutorial">Tutorial</string>
    <string name="about_action_license">License</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_list">            • Adjust your preferences for each event, or let Tacere silence everything by default.\n
            • Tap an event to cycle the ringer state.\n
            • Long press an event for additional settings.\n
            • Select calendars to sync and set defaults\n</string>
    <string name="about_intro">Tacere automatically silences your phone whenever there is an active event in the calendar.</string>
    <string name="about_source">Tacere is Open Source.  The code is hosted at <a href="http://www.github.com/ciasaboark/Tacere">GitHub</a>.</string>
    <string name="about_bugs">Bugs and other issues can be reported via the <a href="https://github.com/ciasaboark/Tacere/issues">Issues</a> tab on the project website.</string>
    <string name="about_comments">If you found Tacere useful or have a suggestion feel free to leave a comment on the <a href="https://play.google.com/store/apps/details?id=org.ciasaboark.tacere">Google Play Store</a> or send me an <a href="mailto:ciasaboark@gmail.com?subject=Tacere is so awesome, thank you so much!">email</a>.</string>
    <string name="title_activity_beta_release">Beta Signup Program</string>
    <string name="beta_release_intro1">Want to live on the wild side? Want access to new features and bugfixes without the burden of stability? Sign up for the beta release program.  </string>
    <string name="beta_release_intro2">Beta releases are handled through the Google Play Store.  In order to sign up for beta releases you must already have a Google+ account and complete the following steps:</string>
    <string name="beta_release_step1">Join the <a href="https://plus.google.com/communities/107664743400638112545">Tacere Beta Google+ Community</a></string>
    <string name="beta_release_step2"><a href="https://play.google.com/apps/testing/org.ciasaboark.tacere">Opt in</a> to the beta release program</string>
    <string name="beta_release_final">Beta releases will be automatically downloaded once they become available.</string>
    <string name="beta_release_git">Beta releases can also be manually downloaded from the <a href="https://github.com/ciasaboark/Tacere/tree/master/release">git repository</a>, but releases here tend to be sporadic.</string>
    <string name="bug_report_title">Send Feedback</string>
    <string name="bug_report_intro">Help make Tacere better by reporting bugs and feature requests. Application crashes will be automatically reported (if turned on).</string>
    <string name="bug_report_message_hint">Describe the problem or feature here</string>
    <string name="bug_report_email_hint">Optional email address</string>
    <string name="bug_report_additional_information">Reports include system information, incluing device model, version information, and system logs.</string>
    <string name="bug_report_toast_sent">Thanks, your report was sent.</string>
    <string name="bug_report_toast_failed">Unable to send bug report. Please make sure your network connection is working.</string>
    <string name="bug_report_checkbox">Include system information</string>
    <string name="bug_report_internet">Sending bug reports requires an active internet connection.</string>
    <string name="about_license_title">License/Credits</string>
    <string name="settings_section_service_toggle">Automatic Silencing</string>
    <string name="settings_title">Settings</string>
    <string name="settings_action_restore">Restore Defaults</string>
    <string name="settings_action_updates">Updates</string>
    <string name="settings_section_general_title">General</string>
    <string name="settings_section_volumes_title">Volumes</string>
    <string name="settings_section_advanced_title">Advanced</string>
    <string name="settings_section_general_select_calendars">Select Calendars</string>
    <string name="settings_section_general_ringer">Default Ringer Type</string>
    <string name="settings_section_general_ringer_normal">Device will ring as normal during events</string>
    <string name="settings_section_general_ringer_vibrate">Device will vibrate during events</string>
    <string name="settings_section_general_ringer_silent">Device will silence during events</string>
    <string name="settings_section_general_ringer_ignore">All events will be ignored</string>
    <string name="settings_section_general_do_not_disturb">Enable Do Not Disturb</string>
    <string name="settings_section_volumes_media">Silence Media Volume</string>
    <string name="settings_section_volumes_alarm">Silence Alarm Volume</string>
    <string name="settings_section_advanced_additional">Additional Settings</string>
    <string name="pref_advanced_sub">Intervals and event types</string>
    <string name="title_activity_select_calendars">Select Calendars</string>
    <string name="advanced_settings_title">Advanced Settings</string>
    <string name="advanced_settings_section_events_title">Events</string>
    <string name="advanced_settings_section_intervals_title">Intervals</string>
    <string name="advanced_settings_section_beta_title">Beta Settings</string>
    <string name="advanced_settings_section_events_available">Available Events</string>
    <string name="advanced_settings_section_events_available_enabled">Events marked as available will be silenced</string>
    <string name="advanced_settings_section_events_available_disabled">Events marked as available will be ignored</string>
    <string name="advanced_settings_section_events_all_day">All Day Events</string>
    <string name="advanced_settings_section_events_all_day_enabled">All day events will be silenced</string>
    <string name="advanced_settings_section_events_all_day_disabled">All day events will be ignored</string>
    <string name="advanced_settings_section_intervals_buffer">Event Buffer</string>
    <string name="advanced_settings_section_intervals_buffer_duration">Events will trigger %1$d minutes early and last %1$d minutes after the event ends</string>
    <string name="advanced_settings_section_intervals_lookahead">Date Range</string>
    <string name="advanced_settings_section_intervals_lookahead_duration">Events for the next %1$s will be fetched</string>
    <string name="advanced_settings_section_intervals_quicksilence">Adjust Quick Silence Duration</string>
    <string name="advanced_settings_section_interval_quicksilence_duration">Quick silencing will last for %1$s%2$d minutes</string>
    <string name="advanced_settings_section_reports_title">Reports</string>
    <string name="advanced_settings_section_reports_text">Enable Crash Reports</string>
    <string name="advanced_settings_section_reports_description_enabled">Crash reports will be sent automatically</string>
    <string name="advanced_settings_section_reports_description_disabled">Crash reports will not be sent automatically</string>
    <string name="advanced_settings_section_beta_largedisplay">Force large display</string>
    <string name="advanced_settings_section_beta_largedisplay_description">Use the same event view as a tablet.  Not recommened for devices under 5 inches</string>
    <string name="placeholder">Placeholder String</string>
    <string name="hour">Hour</string>
    <string name="hour_lower">hour</string>
    <string name="hours">Hours</string>
    <string name="hours_lower">hours</string>
    <string name="minute">Minute</string>
    <string name="minute_lower">minute</string>
    <string name="minutes">Minutes</string>
    <string name="minutes_lower">minutes</string>
    <string name="close">Close</string>
    <string name="years">years</string>
    <string name="weeks">weeks</string>
    <string name="days">days</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">send</string>
    <string name="icon_alt_text_normal">normal ringer icon</string>
    <string name="icon_alt_text_vibrate">vibrate ringer icon</string>
    <string name="icon_alt_text_silent">silent ringer icon</string>
    <string name="all_day">All Day</string>
    <string name="ring">Ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="silent">Silent</string>
    <string name="event_dialog_save_all_instances_message">%1$s repeats %2$d times.\nSave this setting for all events in this series?</string>
    <string name="event_dialog_reset_all_instances_message">%1$s repeats %2$d times.\nWould you like to reset all events in this series?</string>
    <string name="event_dialog_reset_event_series">Reset all events in this series to use the %1$s ringer?</string>
    <string name="event_dialog_save_instance">Just this one</string>
    <string name="event_dialog_save_all_instances">All events</string>
    <string name="event_dialog_reset_event_series_ok">Reset Series</string>
    <string name="event_dialog_repeating_event_conformation_title">Apply to event series?</string>
    <string name="updates_title">Recent Updates</string>
    <string name="hide_updates">Hide until next update</string>
    <string name="donation_title">Thank You!</string>
    <string name="donation_text">Thanks for your donation.  Your support is greatly appreciated.</string>
    <string name="widget_quicksilence">Quick Silence</string>
    <string name="widget_duration">%1$s%2$d minutes</string>
    <string name="action_add_event">Add Event</string>
    <string name="notification_quicksilence_title">Quick Silence</string>
    <string name="settings_restored">Settings have been restored to defaults</string>
    <string name="notification_time_and_unit">%1$d %2$s</string>
    <string name="tutorial_welcome_title">Welcome!</string>
    <string name="tutorial_welcome_intro">Tacere will automatically silence your device during calendar events.</string>
    <string name="tutorial_welcome_details">By default I\'ll silence your device\'s ringer for all events except those that are all day or those marked as \'available\' in the calendar.  Silencing will begin 5 minutes before an event begins, and last 5 after the event ends.  I\'ll post a notification whenever an event starts.</string>
    <string name="tutorial_welcome_skip">If these defaults sound good, feel free to skip this tutorial, otherwise swipe over for more details on what can be configured.</string>
    <string name="tutorial_crash_report_title">Help Improve Tacere</string>
    <string name="tutorial_crash_report_description">Sending in crash reports will help me keep Tacere running smoothly on the myriad number of Android devices and versions.</string>
    <string name="tutorial_crash_report_description_cont"> Bug reports include device and version information, no sensitive data is transferred.</string>
    <string name="tutorial_crash_report_sample">See a sample report</string>
    <string name="tutorial_crash_report_checkbox">Send crash reports</string>
</resources>