<!--
  ~ Copyright (c) 2014 Jonathan Nelson
  ~ Released under the BSD license.  For details see the COPYING file.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_about_tutorial"
        android:icon="@drawable/history_icon"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/about_action_tutorial" />
    <item
        android:id="@+id/action_about_license"
        android:icon="@drawable/copyright_icon"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/about_action_license" />
    <item
        android:id="@+id/action_about_updates"
        android:icon="@drawable/history_icon"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/settings_action_updates" />
</menu>
