<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2015 Jonathan Nelson
  ~ Released under the BSD license.  For details see the COPYING file.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@null"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="visible">

        <TextView
            android:id="@+id/tutorial_report_sample_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp"
            android:text="@string/tutorial_crash_report_sample"
            android:textAllCaps="true"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/text_button_positive"/>

        <ScrollView
            android:id="@+id/tutorial_report_scrollview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/tutorial_report_sample_button"
            android:layout_alignParentStart="false"
            android:layout_alignParentTop="true">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/tutorial_report_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/tutorial_crash_report_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"/>

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingBottom="16dp"
                    android:text="@string/tutorial_crash_report_description"
                    android:textAppearance="?android:attr/textAppearanceMedium"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_marginRight="16dp"
                        android:src="@drawable/bug"
                        android:tint="@color/tutorial_icon_tint"/>

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:text="@string/tutorial_crash_report_description_cont"
                        android:textAppearance="?android:attr/textAppearanceMedium"/>

                </LinearLayout>

                <CheckBox
                    android:id="@+id/tutorial_crash_report_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/tutorial_crash_report_checkbox"
                    />


            </LinearLayout>
        </ScrollView>

    </RelativeLayout>
</LinearLayout>