<!--
  ~ Copyright (c) 2014 Jonathan Nelson
  ~ Released under the BSD license.  For details see the COPYING file.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.ciasaboark.tacere.activity.fragment.AdvancedSettingsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/advanced_settings_section_events_title"
            android:textColor="@color/section_text_color" />


        <RelativeLayout
            android:id="@+id/advanced_settings_freetime_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_settings_section_events_available"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/silenceFreeTimeDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/silenceFreeTimeCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false" />

        </RelativeLayout>

        <View style="@style/Divider" />

        <RelativeLayout
            android:id="@+id/advanced_settings_allday_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/advanced_settings_section_events_all_day"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/silenceAllDayDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/placeholder"
                    android:textAppearance="?android:attr/textAppearanceSmall" />
            </LinearLayout>

            <CheckBox
                android:id="@+id/silenceAllDayCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:clickable="false" />

        </RelativeLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/section_background"
            android:padding="16dp"
            android:text="@string/advanced_settings_section_intervals_title"
            android:textColor="@color/section_text_color" />

        <LinearLayout
            android:id="@+id/advanced_settings_quicksilence_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusableInTouchMode="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_settings_section_intervals_quicksilence"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/quickSilenceDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/advanced_settings_buffer_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_settings_section_intervals_buffer"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/bufferMinutesDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View style="@style/Divider" />

        <LinearLayout
            android:id="@+id/advanced_settings_lookahead_box"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_settings_section_intervals_lookahead"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lookaheadDaysDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:text="@string/placeholder"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <View style="@style/Divider" />

    </LinearLayout>

</FrameLayout>
